# live-bootcamp-project

./: compose.yml
auth-service/: Cargo.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/routes/: login.rs  signup.rs  verify_token.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  mod.rs  requests.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
